css/master-template/common.less
/*----------------------------------------------*/
/*                  Base Settings               */
/*----------------------------------------------*/

html,
body {
    padding: 0;
}

body {
    background-color      : @background-color;
    font-family           : @main-font;
    -webkit-font-smoothing: antialiased;
    font-size             : @fontsize-main;

    @media @mobile {
        font-size: @fontsize-mobile;
    }
}

iframe {
    max-width: 100%;
}

* {
    box-sizing: border-box;
}

.screen-content,
button {
    font-family: @main-font;
}

#group_main,
#group_Header #PH_Menu>* {
    @media @mobile {
        width: 100%;
        float: inherit;
    }
}

.screen-content {
    //padding-top   : 100px;
    margin-top      : 100px;
    background-color: @background-color;
    max-width       : 1400px;
    padding         : 0 5%;

    @media @desktop-large {
        padding: 0;
    }
}

/* Header */
body,
#group_Header-fixed {
    max-width       : 100%;
    width           : 100%;
    box-shadow      : none !important;
    background-color: @background-color  !important;

    @media @mobile {
        padding-left : 0% !important;
        padding-right: 0% !important;
    }
}

body #group_Header-fixed {
    height       : @header-height;
    border-bottom: 0.5px solid @button-color;

    @media @mobile {
        height: @header-height-mobile;
    }
}

#group_Header-fixed.primary #PH_logo,
#group_Header-fixed.primary #PH_Main_Menu,
#group_Header-fixed.primary #PH_Search_Box {
    @media @desktop {
        display: none;
    }
}

.ph_float_menu {
    width: auto;

}

#siteMenuBar {
    display: block;
    margin : 0;
    padding: 0;
    width  : 100%;
    height : 100%;
}

.siteMenuContainer {
    display        : flex;
    justify-content: flex-end;
    align-items    : center;
    margin         : 0 auto;
    max-width      : 1000px;
    float          : none;
    overflow       : hidden;
    height         : 100%;
}

.siteMenuContainer button#navMenu_Float_login_item {
    width : auto;
    height: auto;
    order : 1;
}

#PH_Float_Menu #siteMenuBar .siteMenuContainer .flm_my_basket {
    display        : flex;
    justify-content: center;
    align-items    : center;
    position       : static;
    margin         : 0;
    padding        : 0;
    width          : auto;
    height         : 100%;
    order          : 4;
    background     : none;
    color          : black;
}


#siteMenuBar #CountDown.active .timer-tooltip {
    @media @mobile {
        //top  : 1.05rem !important;
        //right: 34% !important;
    }
}

a#navMenu_Float_TimeRemaining_item {
    order: 5;
}

#siteMenuBar #CountDown.active {
    display   : block !important;
    position  : relative !important;
    width     : 60px;
    height    : 33%;
    order     : 6;
    margin    : 0;
    background: transparent;

    @media @mobile {
        //display: none;
    }
}

.account button {
    background-color: transparent;
    color           : @button-font-color;
}

div#PH_header-container {
    display: block;
    width  : 100%;
}

.main-logo {
    max-width: @logo-maxwidth-desktop;
    padding  : 0 5%;

    @media @mobile {
        max-width: @logo-maxwidth-mobile;
        padding  : 0;
    }
}

img.logo-image {
    max-width : @logo-maxwidth-desktop;
    height    : @logo-height;
    margin-top: @logo-margin-top;

    @media @mobile {
        max-width : @logo-maxwidth-mobile;
        margin-top: @logo-margin-top-mobile;
    }
}

div#PH_Float_Menu {
    @media @mobile {
        position: absolute;
    }
}

#siteMenuBar #customerBox .loyaltyPoints,
#siteMenuBar #customerBox .qualityPoints {
    display: none;
}

#siteMenuBar #my_basket>span:before,
#siteMenuBar [id='my basket']>span:before {
    font-family : 'FontAwesome';
    color       : #fff;
    margin-right: 0;
    content     : '\f291';
    font-size: 16px;
    font-weight: bold;

    @media @desktop {
        color: @button-color;
    }
}

span.mnuBtnCaption::before {
    font-family: 'FontAwesome';
    color: @button-color;
    margin-right: 10px;
    content: '\f007';
}

#navMenu_Float_Search_item > span::before {
        font-family : 'FontAwesome';
        color       : @button-color;
        margin-right: 10px;
        content     : '\f002';
}

#siteMenuBar #my_basket>span,
#siteMenuBar [id='my basket']>span {
    //left: 58px;
}


#siteMenuBar #my_basket>span {
    position   : static;
    width      : auto;
    height     : auto;
    line-height: normal;
}

#group_Header-fixed #PH_Search_Box {
    width : 33%;
    height: 35px;
}

#group_Header-fixed FORM.frmSearch .SearchTextButton:before {
    color: transparent;
}


#group_Header-fixed:not(.searchPageOpen) .ph_search_box FORM.frmSearch .SearchBoxContainer .SearchTextButton {
    border-style: none;
    width       : 100%;
    left        : 0px;
}

/* Footer */
#group_Footer {
    background-color: #fff;
}

#eventPage.seated #ticketsPane .selectTickets .buttonsContainer {
    background-color: #fff;
    box-shadow      : none !important;
    border-top      : 0.5px solid @button-color;
}

/* Breadcrumbs */
.ph_tunnellocation .step,
.ph_tunnellocation .innerpath {
    display: none !important;
}


.ph_tunnellocation {
    background-image: none !important;
}

.crumb {
    display       : inline-block;
    text-align    : left;
    vertical-align: middle;
}

.breadcrumbs {
    display     : block;
    width       : 100%;
    padding-left: 0;

    @media @mobile {
        padding-left: 5%;
        font-size   : 13px;
    }
}

div#PH_breadcrumbs {
    margin-top: 85px;
    width     : 100%;
    display   : block;

    @media @mobile {
        margin-top: 140px;
    }
}

.crumb.step-one:after,
.crumb.step-two:after,
.crumb.step-three:after {

    content: '/';
    margin : 0 10px;

    @media @mobile {
        margin: 0 2px 0 7px;
    }
}


/* Promo Box */
.promoBox:before {
    display: none !important;
}



.promoBox input+button {
    .sub-button();
}
/* ... */

